<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonBuatFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/buat_file"
        />
    <Button
        android:id="@+id/buttonUbahFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/ubah_file"
        />

    <Button
        android:id="@+id/buttonBacaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/baca_file"
        />
    <Button
        android:id="@+id/buttonHapusFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/hapus_file"
        />

    <TextView
        android:id="@+id/textBaca"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@android:color/darker_gray"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        tools:text="@string/text_baca" />

</LinearLayout>