<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:gravity="center"
        android:text="@string/latihan_persistance"
        android:textSize="20sp" />

    <Button
        android:id="@+id/internalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internal_storage"
        android:textSize="17sp"/>
    <Button
        android:id="@+id/externalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage"
        android:textSize="17sp"/>

</LinearLayout>